--- a/views/index.hbs
+++ b/views/index.hbs
@@ -78,7 +78,7 @@ function wrongCorrecto(){
 
 }
 
-function wrongIncorrecto(){
+function wrongIncorrect(){
 	test = _("test");
 	_("test_status").innerHTML = "<h2 class='lol inline'>"+choice+"</h2>" + "<h2 class='inline'> is incorrect.</h2>";
 	test.innerHTML = ""
