--- a/views/index.hbs
+++ b/views/index.hbs
@@ -206,11 +206,11 @@ function checkWrongAnswer(){
 	for(var i=0; i<choices.length; i++){
 		choice = choices[i].value;
 	}
-	if(choice == questions[pos][1]){
+	if(choice == questions[pos + 1][1]){
 		correct++;
 		wrongCorrecto();
 	}
-	if(choice != questions[pos][1]){
+	if(choice != questions[pos + 1][1]){
 		wrongIncorrect();
 	}
 	pos++;
